In development
	* Small bug with friendship cache updater fixed

0.5
	* Fixed bug with paste into the tweet editor

0.4
	+ Bio and location information to the profile page
	+ Retweets are now visible

0.3
	+ Follow/unfollow users from the profile page

0.0.3
	* Don't load profile info when switching to the profile page if it is already loaded
	+ OAuth timestamp autocorrection based on server reply
	* Correct account list refresh after remove one
	- Useless spellchecker is turned off in tweet editor

0.0.2
	* Initial production Alpha release