@@ -1,4 +1,5 @@
 In development
+	* Larger avatars on the profile page allowed, up to 96px in width
 	* Small bug with friendship cache updater fixed
 
 0.5
